fixed the formatting and the para spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,190 +1,105 @@
-/* home */
+/* -----------------------Home------------------------- */
 
 /* Homepage Slogan CSS */
-
-
-
 .slogans {
-
   display: grid;
-
   grid-template-columns: 1fr;
-
   padding-top: 35px;
-
 }
 
-
-
 .slogan-name {
-
   display: flex;
-
   align-items: center;
-
   justify-content: center;
-
 }
 
 /*Homepage Slogan CSS*/
-
-
-
   .slogans {
-
     display: grid;
-
     grid-template-columns: repeat(2, 1fr);
-
   }
 
 .slogans img {
-
   width: 50%;
-
   display: block;
-
   margin-left: auto;
-
   margin-right: auto;
-
   padding-bottom: 40px;
 }
 
 /*Homepage Slogans CSS*/
-
-
-
   .slogans {
-
     grid-template-columns: repeat(3, 1fr);
-
   }
 
 
-
-
-/* Menu Page */
+/* -----------------------Menu Page----------------------- */
 
 /* Phone */
 .menu-section-title {
-
   background-color: #00493a;
-
   color: #ffffff;
-
   font-size: 48px;
-
   padding: 10px;
-
 }
-
-
 
 .menu-items {
-
   display: grid;
-
   grid-template-columns: 1fr;
-
 }
 
-
-
 .menu-item {
-
   display: grid;
-
   grid-template-columns: 2fr 3fr;
-
 }
 
 .menu-item-desc {
-
   font-size: 24px;
-
 }
 
 .menu-item img {
-
   max-width: 100%;
-
   border-radius: 50%;
-
   object-fit: cover;
-
   width: 250px;
-
   height: 250px;
-
 }
 
 .smoothie-desc {
-
   font-size: 36px;
-
   padding-top: 40px;
-
 }
-
 
 .smoothie-list {
-
   text-align: center;
-
   font-size: 24px;
-
 }
 
-
 .smoothie-list p {
-
   font: ;
-
   font-size: 27px;
-
   padding-bottom: 30px;
-
 }
 
 /* menu button */
-
   .button {
-
   background-color: white;
-
   color: black;
-
   border: 2px solid #00493a;
-
   padding: 16px 32px;
-
   text-align: center;
-
   text-decoration: none;
-
   display: inline-block;
-
   font-size: 36px;
-
 }
-
-
 
 .button:hover {
-
   background-color: #00493a;
-
   color: #ffffff;
-
 }
 
-
-
 .button-container {
-
   text-align: center;
-
 }
 
 /* Menu Items */
@@ -204,136 +119,79 @@
 }
 
 /* Tablet and up */
-
 @media (min-width: 768px) {
 
   /*Navigation Menu CSS*/
 
 .main-quote {
-
-    font-size: 25x;
-
-    padding: 60px;
-
-    text-align: center;
+  font-size: 25x;
+  padding: 60px;
+  text-align: center;
   }
 
-  #navbar ul {
+#navbar ul {
+  list-style: none;
+  padding: 10px;
+  text-align: center;
+}
 
-    list-style: none;
+#navbar li {
+  display: inline;
+  padding: 10px;
+}
 
-    padding: 10px;
+#navbar a {
+  font-size: 36px;
+}
 
-    text-align: center;
+#navbar .title {
+  font-size: 72px;
+}
 
-  }
+/*Menu Items CSS*/
+.menu-items {
+grid-template-columns: 1fr 1fr;
+}
 
-  #navbar li {
+.menu-item img {
+  max-width: 100%;
+  border-radius: 15%;
+  width: 70%;
+  height: ;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
 
-    display: inline;
+.menu-item p {
+  font-size: 25px;
+}
 
-    padding: 10px;
+.smoothie-desc {
+  font-size: px;
+  padding-top: 20px;
+}
 
-  }
+.smoothie-list {
+  text-align: center;
+  font-size: 24px;
+}
 
-  #navbar a {
-
-    font-size: 36px;
-
-  }
-
-  #navbar .title {
-
-    font-size: 72px;
-
-  }
-
- /*Menu Items CSS*/
-
-
-
-  .menu-items {
-
-    grid-template-columns: 1fr 1fr;
-
-  }
-
-
-
-  .menu-item img {
-
-    max-width: 100%;
-
-    border-radius: 15%;
-
-    width: 70%;
-
-    height: ;
-
-    padding-top: 20px;
-
-    padding-bottom: 20px;
-
-  }
-
-
-
-  .menu-item p {
-
-    font-size: 25px;
-
-  }
-
-
-
-  .smoothie-desc {
-
-    font-size: px;
-
-    padding-top: 20px;
-
-  }
-
-
-
-  .smoothie-list {
-
-    text-align: center;
-
-    font-size: 24px;
-
-  }
-
-
-
-  .smoothie-list p {
-
-    font: ;
-
-    font-size: 24px;
-
-    padding-bottom: 30px;
-
-  }
-
+.smoothie-list p {
+  font: ;
+  font-size: 24px;
+  padding-bottom: 30px;
+}
 }
 
 /* Desktop and up*/
-
-
-
 @media (min-width: 1440px) {
 
   /*Menu Items CSS*/
+.menu-items {
+  grid-template-columns: 1fr 1fr 1fr;
+}
 
-  .menu-items {
-
-    grid-template-columns: 1fr 1fr 1fr;
-
-  }
-
-
-/* Order Page */
+/* --------------------------------Order Page------------------------------ */
 .opener {
   font-size: 40px;
   text-align: center;
@@ -367,41 +225,32 @@
 .order-item {
   display: grid;
   grid-template-columns: 2fr 3fr;
-   row-gap: 20px
+  row-gap: 20px
 
 }
-
 
 /* Tablet and up */
   .order-items {
     grid-template-columns: 1fr 1fr 1fr;
-
   }
 
 .order-item {
   display: grid;
   grid-template-columns: 2fr 3fr;
-   row-gap: 20px
-
-
+  row-gap: 20px
 }
-
 
 /* Desktop and up */
 @media (min-width: 1440px) {
-}
-
-
 .cart {
   justify-content: center;
   font-size: 30px;
   color: #000;
   background-color: #9db9ab8c;
 }
+}
 
-
-/* Navigation */
-
+/* ---------------------------------Navigation---------------------------- */
 * {
   margin: 0;
   padding: 0;
@@ -473,7 +322,7 @@
 }
 
 
-/* footer */
+/* -----------------------------------footer---------------------------- */
 
 /* footer */
 body {
@@ -519,7 +368,7 @@ body {
 }
 
 
-/* contact us */
+/* -----------------------------contact us----------------------------- */
 
 * {
   font-family: 'Ruluko', sans-serif;
@@ -616,15 +465,17 @@ input[type='submit']:hover {
   }
 }
 
-/* confirmation */
+/* -------------------------------confirmation----------------------------- */
 
-p {
+/* THE ISSUE IS HERE */
+
+/* p {
   font-size: 48px;
   padding: 60px;
-}
+} */
 
 
-/* cart */
+/* ---------------------------------cart----------------------------------- */
 
 article {
   height: auto;
@@ -671,7 +522,7 @@ body {
   background-color: #9db9ab8c;
 }
 
-/* about us */
+/* ----------------------------about us---------------------------- */
 
 /* Phone */
 * {
